@@ -1828,6 +1828,7 @@ include/rt/debug.h svneol=native#text/plain
 include/rt/defines.h svneol=native#text/plain
 include/rt/directory.h svneol=native#text/plain
 include/rt/dspline.h svneol=native#text/plain
+include/rt/func.h svneol=native#text/plain
 include/rt/functab.h svneol=native#text/plain
 include/rt/global.h svneol=native#text/plain
 include/rt/hit.h svneol=native#text/plain
@@ -1880,7 +1881,6 @@ include/rt/vlblock.h svneol=native#text/plain
 include/rt/vlist.h svneol=native#text/plain
 include/rt/wdb.h svneol=native#text/plain
 include/rt/xray.h svneol=native#text/plain
-include/rtfunc.h svneol=native#text/plain
 include/rtgeom.h svneol=native#text/plain
 include/rtserver.h svneol=native#text/plain
 include/shadefuncs.h svneol=native#text/plain
